--- a/Changes
+++ b/Changes
@@ -1,14 +1,19 @@
 Revision history for Perl extension Digest::Perl::MD4.
 
-1.02  14-Aug-2002 7:12
+1.3  14-Aug-2002 10:18
+	- Quote pack's bare words detected by v5.8 but not v5.6.1
+	- Fixed version number here to match real versions.
+	- Added MANIFEST
+
+1.2  14-Aug-2002 7:12
 	- Include Makefile.PL in tar file
 	- Report last_test_to_print in test.pl
 	- Eliminated ^Ms
 
-1.01  9-Aug-2002 12:47
+1.1  9-Aug-2002 12:47
 	- Convert test code to use CPAN testing scaffolding.
 	- Added Makefile.PL
 
-1.00  4-Jan-2002 15:49
+1.0  4-Jan-2002 15:49
 	- original version, modulized with OO interface
 
