Import of OTAKA/Digest-Perl-MD4-1.4 from CPAN.
gitpan-cpan-distribution: Digest-Perl-MD4
gitpan-cpan-version:      1.4
gitpan-cpan-path:         OTAKA/Digest-Perl-MD4-1.4.tar.gz
gitpan-cpan-author:       OTAKA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -53,4 +53,4 @@ Digest-MD4.pm	Digest/MD4.pm		# if C-code MD4 is NOT installed
 
 AUTHOR
 
-Ted Anderson <ota@transarc.com>
+Ted Anderson <tedanderson@mindspring.com>
