--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Digest::Perl::MD4.
 
+1.4  17-Jan-2004 21:45
+	- Added "s" option to split pattern to handle files with
+	  embedded newlines (CPAN Ticket 4961).
+
 1.3  14-Aug-2002 10:18
 	- Quote pack's bare words detected by v5.8 but not v5.6.1
 	- Fixed version number here to match real versions.
